src/test/deca/syntax/invalid/Loop_incomplete.deca
// Description:
//    Une boucle while incomplete
//
// Resultats:
//    Erreur
//
// Historique:
//    cree le 04/01/2023

{
    int i = 5;
    while(i==5)
}
